# fastapi_demo

./: .gitignore  README.md  main.py  pyproject.toml
app/: config.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  items.py
app/core/: exceptions.py  security.py
app/db/: session.py
app/models/: user.py
app/repositories/: item_repo.py  user_repo.py
app/schemas/: user.py
app/services/: item_service.py  user_service.py
